--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,12 @@ jobs:
   build_executable:
     runs-on: ubuntu-latest
     steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+         registry: ghcr.io
+         username: ${{ github.actor }}
+         password: ${{ secrets.GITHUB_TOKEN }}
       - name: Checkout repo code
         uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -12,8 +18,11 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
           cache: 'maven'
-      - name: Build with Maven
+      - name: Build with Maven and docker, push to registry
         run: |
           mvn -B package 
-          ls -lh
+          ls -lh target
+          cp src/main/docker/Dockerfile ./target/
+          docker build --tag ghcr.io/${{github.actor }}/backend:latest ./target
+          docker push ghcr.io/${{ github.actor }}/backend:latest
 
