--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
         with:
          registry: ghcr.io
          username: ${{ github.actor }}
-         password: ${{ secrets.GITHUB_TOKEN }}
+         password: ${{ secrets.MY_TOKEN }}
       - name: Checkout repo code
         uses: actions/checkout@v4
       - uses: actions/setup-java@v4
