--- a/k8s/appsrv.yaml
+++ b/k8s/appsrv.yaml
@@ -8,29 +8,19 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: appsrv
+      component: appsrv
   template:
     metadata:
       labels:
-        app: appsrv
+        component: appsrv
     spec:
       containers:
         - name: appsrv
-          image: ghcr.io/netzermi/backend3:latest
+          #image: ghcr.io/clander/backend4:latest
+          image: ghcr.io/netzermi/backend:latest
           # remove this when stable. Currently we do not take care of version numbers
           imagePullPolicy: Always
           ports:
-            - containerPort: 8080
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: appsrv
+            - containerPort: 80
 
-spec:
-  ports:
-    - port: 80
-      targetPort: 8080
-      protocol: TCP
-  selector:
-    app: appsrv
+
