--- a/k8s/ingress-appsrv.yaml
+++ b/k8s/ingress-appsrv.yaml
@@ -3,13 +3,26 @@ kind: IngressRoute
 metadata:
   name: nemi
 spec:
-  #  entryPoints:
-  #    - websecure
+#  entryPoints:
+#    - websecure
   routes:
-    - kind: Rule
-      match: Host(`nemi.cloud.key.fit`)
-      services:
-        - name: appsrv
-          port: 8080
-#  tls:
-#    secretName: default-ingress-cert
+  - kind: Rule
+    match: Host(`nemi.cloud.key.fit`)
+    services:
+    - name: appsrv
+      port: 80
+#    tls:
+#      secretName: default-ingress-cert
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: appsrv-service
+
+spec:
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+  selector:
+    component: appsrv
