--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/demo
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.package.type=uber-jar
-#.hibernate-orm.sql-load-script=import.sql
+quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.http.host=0.0.0.0
 quarkus.http.port=80
 quarkus.http.access-log.enabled=true
